change status list to scrollable.

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   font-family: 'SourceHanCodeJP';
   src: url('SourceHanCodeJP-Light.otf');
 }
+#status-box {
+  width: 100%;
+  overflow: auto;
+}
 #status {
   font-family: sans-serif;
   white-space: nowrap;
