--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  background: #eee;
 }
 main {
   width: 100%;
@@ -37,9 +38,10 @@ main {
 }
 .panel-container {
   display: flex;
-  background: #000;
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
+  padding: 1em;
 }
 .panel-container.col {
   flex-direction: column;
@@ -50,29 +52,15 @@ main {
   min-width: 0;
   box-sizing: border-box;
   overflow: auto;
+  box-shadow: 0 2px 2px 1px rgba(0,0,0,0.5);
+  border-radius: 2px;
 }
-.panel-start .panel-end {
-  box-sizing: border-box;
-}
-.panel-container:not(.col) > .panel-start {
-  border-radius: 0 0.5em 0.5em 0;
-  margin-right: 0;
-}
-.panel-container.col > .panel-start {
-  border-radius: 0 0 0.5em 0.5em;
-  margin-bottom: 0;
-}
-.panel-container:not(.col) > .panel-end {
-  border-radius: 0.5em 0 0 0.5em;
-  margin-left: 0;
-}
-.panel-container.col > .panel-end {
-  border-radius: 0.5em 0.5em 0 0;
-  margin-top: 0;
+.panel-splitter {
+  background: transparent;
 }
 .panel-container:not(.col) > .panel-splitter {
   cursor: col-resize;
-  width: 4px;
+  width: 0.5em;
   height: 100%;
 }
 .panel-container.col > .panel-splitter {
@@ -81,7 +69,7 @@ main {
   height: 0.5em;
 }
 .panel-content {
-  padding: 0.5em;
+  padding: 1em;
 }
 #message_textarea {
   width: 100%;
